--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Sequelize DB for users to collect cheeses and place them on boards",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "jest --runInBand",
     "seed": "cd db && node seed.js",
     "main": "cd src && node main.js"
   },
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/MultiverseLearningProducts/cheese-boards#readme",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.2.2",
     "sequelize": "^6.25.3",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.2.2"
   }
 }
